// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KQL Custom Transform Generator aggregates using the denominator kql 1`] = `
Object {
  "filter": Object {
    "bool": Object {
      "minimum_should_match": 1,
      "should": Array [
        Object {
          "exists": Object {
            "field": "http.status_code",
          },
        },
      ],
    },
  },
}
`;

exports[`KQL Custom Transform Generator aggregates using the numerator kql 1`] = `
Object {
  "filter": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "range": Object {
                  "latency": Object {
                    "lt": "400",
                  },
                },
              },
            ],
          },
        },
        Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "match": Object {
                        "http.status_code": "2xx",
                      },
                    },
                  ],
                },
              },
              Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "match": Object {
                        "http.status_code": "3xx",
                      },
                    },
                  ],
                },
              },
              Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "match": Object {
                        "http.status_code": "4xx",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`KQL Custom Transform Generator filters the source using the kql query 1`] = `
Object {
  "bool": Object {
    "minimum_should_match": 1,
    "should": Array [
      Object {
        "match": Object {
          "labels.groupId": "group-4",
        },
      },
    ],
  },
}
`;

exports[`KQL Custom Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 2,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v2",
    "pipeline": ".slo-observability.sli.pipeline",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "slo.denominator": Object {
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>_count",
            "totalEvents": "slo.denominator>_count",
          },
          "script": "params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "filter": Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "range": Object {
                  "latency": Object {
                    "lt": "300",
                  },
                },
              },
            ],
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.budgetingMethod": Object {
        "terms": Object {
          "field": "slo.budgetingMethod",
        },
      },
      "slo.description": Object {
        "terms": Object {
          "field": "slo.description",
        },
      },
      "slo.groupBy": Object {
        "terms": Object {
          "field": "slo.groupBy",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.indicator.type": Object {
        "terms": Object {
          "field": "slo.indicator.type",
        },
      },
      "slo.instanceId": Object {
        "terms": Object {
          "field": "slo.instanceId",
        },
      },
      "slo.name": Object {
        "terms": Object {
          "field": "slo.name",
        },
      },
      "slo.objective.sliceDurationInSeconds": Object {
        "terms": Object {
          "field": "slo.objective.sliceDurationInSeconds",
        },
      },
      "slo.objective.target": Object {
        "terms": Object {
          "field": "slo.objective.target",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
      "slo.tags": Object {
        "terms": Object {
          "field": "slo.tags",
        },
      },
      "slo.timeWindow.duration": Object {
        "terms": Object {
          "field": "slo.timeWindow.duration",
        },
      },
      "slo.timeWindow.type": Object {
        "terms": Object {
          "field": "slo.timeWindow.type",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "my-index*",
    "query": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "match": Object {
              "labels.groupId": "group-3",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.budgetingMethod": Object {
        "script": Object {
          "source": "emit('timeslices')",
        },
        "type": "keyword",
      },
      "slo.description": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.groupBy": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.indicator.type": Object {
        "script": Object {
          "source": "emit('sli.kql.custom')",
        },
        "type": "keyword",
      },
      "slo.instanceId": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.name": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.objective.sliceDurationInSeconds": Object {
        "script": Object {
          "source": "emit(120)",
        },
        "type": "long",
      },
      "slo.objective.target": Object {
        "script": Object {
          "source": "emit(0.98)",
        },
        "type": "double",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
      "slo.tags": Object {
        "script": Object {
          "source": "emit('critical,k8s')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.duration": Object {
        "script": Object {
          "source": "emit('7d')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.type": Object {
        "script": Object {
          "source": "emit('rolling')",
        },
        "type": "keyword",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;

exports[`KQL Custom Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 2,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v2",
    "pipeline": ".slo-observability.sli.pipeline",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "slo.denominator": Object {
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.numerator": Object {
        "filter": Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "range": Object {
                  "latency": Object {
                    "lt": "300",
                  },
                },
              },
            ],
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "log_timestamp",
          "fixed_interval": "1m",
        },
      },
      "slo.budgetingMethod": Object {
        "terms": Object {
          "field": "slo.budgetingMethod",
        },
      },
      "slo.description": Object {
        "terms": Object {
          "field": "slo.description",
        },
      },
      "slo.groupBy": Object {
        "terms": Object {
          "field": "slo.groupBy",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.indicator.type": Object {
        "terms": Object {
          "field": "slo.indicator.type",
        },
      },
      "slo.instanceId": Object {
        "terms": Object {
          "field": "slo.instanceId",
        },
      },
      "slo.name": Object {
        "terms": Object {
          "field": "slo.name",
        },
      },
      "slo.objective.target": Object {
        "terms": Object {
          "field": "slo.objective.target",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
      "slo.tags": Object {
        "terms": Object {
          "field": "slo.tags",
        },
      },
      "slo.timeWindow.duration": Object {
        "terms": Object {
          "field": "slo.timeWindow.duration",
        },
      },
      "slo.timeWindow.type": Object {
        "terms": Object {
          "field": "slo.timeWindow.type",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "my-index*",
    "query": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "match": Object {
              "labels.groupId": "group-3",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.budgetingMethod": Object {
        "script": Object {
          "source": "emit('occurrences')",
        },
        "type": "keyword",
      },
      "slo.description": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.groupBy": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.indicator.type": Object {
        "script": Object {
          "source": "emit('sli.kql.custom')",
        },
        "type": "keyword",
      },
      "slo.instanceId": Object {
        "script": Object {
          "source": "emit('*')",
        },
        "type": "keyword",
      },
      "slo.name": Object {
        "script": Object {
          "source": "emit('irrelevant')",
        },
        "type": "keyword",
      },
      "slo.objective.target": Object {
        "script": Object {
          "source": "emit(0.999)",
        },
        "type": "double",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
      "slo.tags": Object {
        "script": Object {
          "source": "emit('critical,k8s')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.duration": Object {
        "script": Object {
          "source": "emit('7d')",
        },
        "type": "keyword",
      },
      "slo.timeWindow.type": Object {
        "script": Object {
          "source": "emit('rolling')",
        },
        "type": "keyword",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "log_timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;
